# Real-Time-Retail-Analytics

./: README.md  analytics_engine.py  anomaly_detector.py  app.py  customer_segmentation.py  data_generator.py  image_generator.py  predictive_analytics.py  pyproject.toml  report_generator.py
